# phone-a-friend

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  package-lock.json  package.json  phone-a-friend  pyproject.toml  tsconfig.json  tsup.config.ts
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: auto-bump.yml  auto-label.yml  ci.yml  label-check.yml  (+3 more)
architecture/: 00-system-overview.md  01-relay-core.md  02-backend-system.md  03-phone-a-team-loop.md  04-installer-plugin.md
commands/: curiosity-engine.md  phone-a-friend.md  phone-a-team.md
docs/: ai-reasoning-research.md  curiosity-engine-analysis.md  session-ollama.md
phone_a_friend/: __init__.py  cli.py  installer.py  relay.py
plans/: evolution-standalone-cli.md  roadmap.md  typescript-rewrite-step1.md
scripts/: bump-version.mjs  sync-codex-plugin.mjs
src/: cli.ts  config.ts  context.ts  detection.ts  display.ts  doctor.ts  gemini-models.ts  index.ts  installer.ts  jobs.ts  relay.ts  sessions.ts  setup.ts  stream-parsers.ts  theme.ts  updates.ts  verdict.ts  version.ts
tests/: background-relay.test.ts  cli.test.ts  codex-plugin-manifests.test.ts  config.test.ts  detection.test.ts  doctor.test.ts  gemini-models.test.ts  gemini.test.ts  installer.test.ts  jobs.test.ts  relay.test.ts  sessions.test.ts  setup.test.ts  skill-files.test.ts  stream-parsers.test.ts  test_cli.py  test_gemini_backend.py  test_installer.py  test_relay.py  updates.test.ts  verdict.test.ts
website/: index.html
(+86 files in other folders)
