[project]
name = "phone-a-friend"
version = "0.3.1"
description = "CLI relay that lets AI coding agents collaborate — delegate tasks to Codex or Gemini"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Bruno Freiberger" }]

[project.optional-dependencies]
rich = ["typer>=0.9"]

[project.scripts]
phone-a-friend = "phone_a_friend.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
